--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"displayName": "Git Exclude Watcher",
 	"publisher": "WhoSowSee",
 	"description": "Automatically update file status after changes in .git/info/exclude",
-	"version": "1.0.0",
+	"version": "1.0.1",
+	"repository": "https://github.com/WhoSowSee/git-exclude-watcher",
 	"icon": "logo.png",
 	"engines": {
 		"vscode": "^1.91.0"
